@@ -113,8 +113,8 @@ export EVALFILE=$EVALFILE
 
 echo > $EVALFILE
 
-# we add 10% to the time limit and additional 10 seconds in case of small time limits
-HARDTIMELIMIT=`expr \`expr $TIMELIMIT + 10\` + \`expr $TIMELIMIT / 10\``
+# we add 50% to the time limit and additional 10 seconds in case of small time limits
+HARDTIMELIMIT=`expr \`expr $TIMELIMIT + 10\` + \`expr $TIMELIMIT / 2\``
 
 # echo "hard time limit: $HARDTIMELIMIT s" >>$OUTFILE
 
